DockerConfigSpecs for redis

--- a/config/src/test/resources/application.conf
+++ b/config/src/test/resources/application.conf
@@ -13,6 +13,31 @@ docker {
     }
   }
 
+  redis {
+    image-name = "redis:3.0.5"
+    ready-checker {
+      log-line = "Server started"
+    }
+    port-maps {
+      default-redis-port {
+        internal = 6379
+      }
+    }
+  }
+
+  redis-sentinel {
+    image-name = "joshula/redis-sentinel"
+    command = ["--sentinel announce-ip localhost", "--sentinel announce-port 26379"]
+    ready-checker {
+      log-line = "monitor master mymaster"
+    }
+    port-maps {
+      default-redis-port {
+        internal = 26379
+      }
+    }
+  }
+
   zookeeper {
     image-name = "jplock/zookeeper:3.4.6"
     ready-checker {
