add support for volume mappings

--- a/config/src/test/resources/application.conf
+++ b/config/src/test/resources/application.conf
@@ -35,6 +35,17 @@ docker {
         internal = 9042
       }
     }
+    volume-maps = [
+      {
+        container = "/opt/data"
+        host = "/opt/docker/data"
+      },
+      {
+        container = "/opt/log"
+        host = "/opt/docker/log"
+        rw = true
+      }
+    ]
   }
 
   mongodb {
