--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,13 @@ jdk:
 
 script:
   - sbt "scalatest/test-only com.whisk.docker.MongodbServiceSpec"
+
+cache:
+  directories:
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt/boot/
+
+before_cache:
+  # Tricks to avoid unnecessary cache updates
+  - find $HOME/.ivy2 -name "ivydata-*.properties" -delete
+  - find $HOME/.sbt -name "*.lock" -delete
