--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ services:
 
 before_install:
   - docker pull mongo:3.0.6
+  - docker pull elasticsearch:1.7.1
 
 language: scala
 
@@ -14,7 +15,7 @@ jdk:
   - oraclejdk8
 
 script:
-  - sbt "scalatest/test-only com.whisk.docker.MongodbServiceSpec"
+  - sbt "scalatest/test-only com.whisk.docker.MongodbServiceSpec com.whisk.docker.ElasticsearchServiceSpec"
 
 cache:
   directories:
