Support for specifying a custom entrypoint

--- a/config/src/test/resources/application.conf
+++ b/config/src/test/resources/application.conf
@@ -83,6 +83,7 @@ docker {
 
   elasticsearch {
     image-name = "elasticsearch:1.7.1"
+    entrypoint = [ "my", "custom", "entrypoint" ]
     ready-checker {
       http-response-code {
         port = 9200
