--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker pull mongo:3.0.6
+  - docker pull mongo:3.4.8
   - docker pull elasticsearch:1.7.1
 
 language: scala
@@ -16,8 +16,7 @@ jdk:
   - oraclejdk8
 
 script:
-  - sbt "scalatest/testOnly com.whisk.docker.MongodbServiceSpec" #spotify executor
-  - sbt "scalatest/testOnly com.whisk.docker.ElasticsearchServiceSpec"  #docker-java executor
+  - sbt tests/test
 
 cache:
   directories:
